🐛 Fixed an issue where the screen overflowed when there were too many navigation items. Now when the navigation items exceed the screen size, the screen can be scrolled. Fixed #3

--- a/Noisky_files/main.css
+++ b/Noisky_files/main.css
@@ -328,6 +328,7 @@ hr {
 }
 
 .footer {
+    display: block;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -546,7 +547,7 @@ nav {
     }
 
     .panel-main {
-        position: relative;
+        position: fixed;
         display: table;
     }
 
